tests/__snapshots__/validation-toHaveProperty-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  3 | describe("argument for 'source'", () => {
  4 |   test("must be provided", () => {
> 5 |     expect().type.toHaveProperty("runTest");
    |     ^
  6 |   });
  7 | 
  8 |   test("must be of an object type", () => {

      at ./__typetests__/toHaveProperty.tst.ts:5:5

Error: An argument for 'source' must be of an object type, received: '"sample"'.

   7 | 
   8 |   test("must be of an object type", () => {
>  9 |     expect("sample").type.toHaveProperty("runTest");
     |            ^
  10 |   });
  11 | });
  12 | 

       at ./__typetests__/toHaveProperty.tst.ts:9:12

Error: A type argument for 'Source' must be of an object type, received: 'any'.

  15 |     expect<{}>().type.not.toHaveProperty("abc");
  16 | 
> 17 |     expect<any>().type.toHaveProperty("runTest");
     |            ^
  18 |     expect<never>().type.toHaveProperty("runTest");
  19 |     expect(null).type.toHaveProperty("runTest");
  20 |     expect<"one" | "two">().type.toHaveProperty("runTest");

       at ./__typetests__/toHaveProperty.tst.ts:17:12

Error: A type argument for 'Source' must be of an object type, received: 'never'.

  16 | 
  17 |     expect<any>().type.toHaveProperty("runTest");
> 18 |     expect<never>().type.toHaveProperty("runTest");
     |            ^
  19 |     expect(null).type.toHaveProperty("runTest");
  20 |     expect<"one" | "two">().type.toHaveProperty("runTest");
  21 |   });

       at ./__typetests__/toHaveProperty.tst.ts:18:12

Error: An argument for 'source' must be of an object type, received: 'null'.

  17 |     expect<any>().type.toHaveProperty("runTest");
  18 |     expect<never>().type.toHaveProperty("runTest");
> 19 |     expect(null).type.toHaveProperty("runTest");
     |            ^
  20 |     expect<"one" | "two">().type.toHaveProperty("runTest");
  21 |   });
  22 | });

       at ./__typetests__/toHaveProperty.tst.ts:19:12

Error: A type argument for 'Source' must be of an object type, received: '"one" | "two"'.

  18 |     expect<never>().type.toHaveProperty("runTest");
  19 |     expect(null).type.toHaveProperty("runTest");
> 20 |     expect<"one" | "two">().type.toHaveProperty("runTest");
     |            ^
  21 |   });
  22 | });
  23 | 

       at ./__typetests__/toHaveProperty.tst.ts:20:12

Error: An argument for 'key' must be provided.

  25 |   test("must be provided", () => {
  26 |     // @ts-expect-error testing purpose
> 27 |     expect<{ test: () => void }>().type.toHaveProperty();
     |                                         ^
  28 |   });
  29 | 
  30 |   test("must be of type 'string | number | symbol'", () => {

       at ./__typetests__/toHaveProperty.tst.ts:27:41

Error: An argument for 'key' must be of type 'string | number | symbol', received: 'string[]'.

  30 |   test("must be of type 'string | number | symbol'", () => {
  31 |     // @ts-expect-error testing purpose
> 32 |     expect<{ test: () => void }>().type.toHaveProperty(["test"]);
     |                                                        ^
  33 |   });
  34 | });
  35 | 

       at ./__typetests__/toHaveProperty.tst.ts:32:56

